Fix pre tag overflow

--- a/src/components/Header/header.module.scss
+++ b/src/components/Header/header.module.scss
@@ -3,6 +3,9 @@
     padding: 0 12rem;
     margin: 0 auto;
 
+    @media screen and (max-width: 746px) {
+      padding: 0 2rem;
+    }
 
     img {
     padding: 3rem 0 2rem 0rem;
