--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,12 +1,20 @@
 .banner {
   height: 500px;
   text-align: center;
+
+  @media screen and (max-width: 746px) {
+      height: 250px;
+    }
 }
 
 .container {
   max-width: 700px;
   margin: 0 auto;
   margin-top: 5rem;
+
+  @media screen and (max-width: 746px) {
+    margin: 1.5rem;
+    }
 
   h1,
   h2 {
@@ -57,6 +65,8 @@
       background-color: var(--black);
       padding: 1.5rem;
       border-radius: 8px;
+  overflow: auto;
+
     }
 
     section {
